2021/02/26時点のもの

--- a/.gitconfig
+++ b/.gitconfig
@@ -8,3 +8,8 @@
     co = checkout
 [pull]
 	rebase = false
+[filter "lfs"]
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
